# souffle

./: .gitignore  .tmp  .travis.yml  CMakeLists.txt  Dockerfile  GPATH  GTAGS  confdefs.h  configure.ac  conftest.cpp  conftest.tar  docker.sh  foo.cpp  lh.sh  notes.aux  souffle8NQJtX  souffleyLEIsB  x.html
.travis/: Dockerfile  init_test_mpi.sh  run_docker.sh
.travis/osx/: brew.sh  install_mpich.sh  install_withgcc_mpich.sh
experiments/: CallInsensitiveFieldSensitivePointsTo.dl  LR.dl  LR.dl.html  LeftLinearTransitiveClosure.dl  LeftLinearTransitiveClosureSpecialFirst.dl  LeftLinearTransitiveClosureSpecialFourth.dl  LeftLinearTransitiveClosureSpecialSecond.dl  LeftLinearTransitiveClosureSpecialThird.dl  MN.dl.html  NR-splitjoin-8-first.dl  NR-splitjoin-8-first.dl.html  NR-splitjoin-8-second.dl.html  NR.dl  NR.dl.html  NonLinearTransitiveClosure.dl  NonLinearTransitiveClosureSpecialFirst.dl  NonLinearTransitiveClosureSpecialFourth.dl  NonLinearTransitiveClosureSpecialSecond.dl  NonLinearTransitiveClosureSpecialThird.dl  RR.dl.html  RSG.dl.html  ReverseSameGeneration.dl  RightLinearTransitiveClosure.dl  SCC.dl.html  SG.dl.html  SameGeneration.dl  TC.dl  TC.dl.html  TopologicalOrdering.dl  generate_datalog.sh  run_experiments.sh  symbol-LR.dl.html  symbol-MN.dl  symbol-MN.dl.html  symbol-NR-splitjoin-8-first.dl.html  symbol-NR-splitjoin-8-second.dl  symbol-NR-splitjoin-8-second.dl.html  symbol-NR.dl.html  symbol-RR.dl  symbol-RR.dl.html  (+7 more)
kafka/: .env  Dockerfile  README.md  deploy.sh  docker-compose.yml  docker.sh  example.sh  execute_master.sh  execute_standalone.sh  execute_strata.sh  generate-results.dl  k8s-descriptor.yml  kafka_api.sh  new-example.sh  notes.txt  script-to-analyse-logs.sh  script-to-generate-datasets.sh  script-to-generate-experiments.sh  script-to-generate-results.sh  script-to-run-experiments-k8s.sh  script-to-run-experiments.sh  script-to-run-in-docker.sh  souffle-kafka.sh  souffle-on-kafka-docker.sh  souffle-on-kafka-experiments.sh  souffle-on-kafka.sh  tmp.sh
kafka/cli/: Dockerfile  docker-compose.yml  execute_master.sh
kafka/lh/notes/: Hparg.h  KafkaPrototype.h  Mpi.h  NOTES.md  Notes.h  WipGraph.h  input_output_numbers_recursive.html  kafka_instructions.md  librdkafka_example.cpp  notes.tex
kafka/log-parser/: .gitignore  metrics.csv  metrics1.csv  pom.xml
kafka/log-parser/src/main/java/au/edu/sydney/logparser/: Main.java
kafka/native/: Dockerfile  execute_master_native.sh  execute_strata_native.sh
kafka/rust/souffle_on_kafka/: Cargo.toml  bar.txt  baz.txt  foo.txt
kafka/rust/souffle_on_kafka/src/: main.rs
man/: souffle-compile.1  souffle-config.1  souffle-profile.1  souffle.1
research/: join.py  join.sh
src/: A.facts  AstIOTypeAnalysis.h  AstRelationIdentifier.h  AstSemanticChecker.cpp  AstTranslator.cpp  AstTranslator.h  AstTranslatorGeneral.cpp  AstTypeEnvironmentAnalysis.h  AstUtils.cpp  AstUtils.h  B.csv  CompiledOptions.h  CompiledSouffle.h  DebugReport.cpp  DebugReport.h  Global.h  IODirectives.h  IOSystem.h  InterpreterEngine.cpp  InterpreterInterface.h  Kafka.h  Makefile.am  Mpi.h  PrecedenceGraph.cpp  PrecedenceGraph.h  RamNode.h  RamStatement.h  RamTransforms.cpp  RamVisitor.h  ReadStream.h  ReadStreamCSV.h  ReadStreamKafka.h  ReadStreamNew.h  SouffleInterface.h  SymbolTable.h  Synthesiser.cpp  WriteStream.h  WriteStreamCSV.h  WriteStreamKafka.h  WriteStreamNew.h  (+7 more)
src/profile/: Cli.h
src/profilerlib/: Cli.cpp
src/test/: kafka_test.cpp  mpi_test.cpp
tests/: evaluation.at  example.at  testsuite.at
tests/evaluation/binop/: binop.dl
tests/evaluation/relop/: relop.dl
tests/evaluation/tautology/: tautology.dl  tautology.err  tautology.out
tests/example/input_output_numbers/: Receiver.csv  input_output_numbers.dl
tests/example/input_output_numbers/facts/: InputOutputReceiveSend.facts  NegatedSender.facts
tests/example/input_output_numbers_recursive/: InputOutput.csv  input_output_numbers_recursive.dl
tests/example/relop/facts/: b.facts
tests/interface/get_symboltabletype/: driver.cpp
tests/interface/insert_for/: driver.cpp
tests/interface/insert_print/: driver.cpp
tests/interface/load_print/: driver.cpp
tests/interface/repeat_analysis/: driver.cpp
tests/interface/signal_error/: driver.cpp
tests/interface/tuple_insertion_diff_element_type/: driver.cpp
tests/interface/tuple_insertion_diff_relation/: driver.cpp
utilities/git/hooks/: pre-commit.sh
