CMAKE_MINIMUM_REQUIRED(VERSION 3.6)
PROJECT(souffle)
SET(CMAKE_CXX_STANDARD 11)
ADD_EXECUTABLE(souffle
        ./src/AstAnalysis.h
        ./src/AstArgument.cpp
        ./src/AstArgument.h
        ./src/AstAttribute.h
        ./src/AstClause.cpp
        ./src/AstClause.h
        ./src/AstComponentChecker.cpp
        ./src/AstComponentChecker.h
        ./src/AstComponent.h
        ./src/AstIODirective.h
        ./src/AstLiteral.h
        ./src/AstNode.h
        ./src/AstParserUtils.cpp
        ./src/AstParserUtils.h
        ./src/AstPragma.cpp
        ./src/AstPragma.h
        ./src/AstProgram.cpp
        ./src/AstProgram.h
        ./src/AstRelation.h
        ./src/AstRelationIdentifier.h
        ./src/AstSemanticChecker.cpp
        ./src/AstSemanticChecker.h
        ./src/AstTransformer.cpp
        ./src/AstTransformer.h
        ./src/AstTransforms.cpp
        ./src/AstTransforms.h
        ./src/AstTranslationUnit.h
        ./src/AstTranslator.cpp
        ./src/AstTranslator.h
        ./src/AstTypeAnalysis.cpp
        ./src/AstTypeAnalysis.h
        ./src/AstType.h
        ./src/AstTypes.h
        ./src/AstUtils.cpp
        ./src/AstUtils.h
        ./src/AstVisitor.h
        ./src/BinaryConstraintOps.h
        ./src/BinaryFunctorOps.h
        ./src/BinaryRelation.h
        ./src/BlockList.h
        ./src/BTree.h
        ./src/CompiledIndexUtils.h
        ./src/CompiledOptions.h
        ./src/CompiledRecord.h
        ./src/CompiledRelation.h
        ./src/CompiledSouffle.h
        ./src/CompiledTuple.h
        ./src/ComponentModel.cpp
        ./src/ComponentModel.h
        ./src/Constraints.h
        ./src/DebugReport.cpp
        ./src/DebugReport.h
        ./src/ErrorReport.h
        ./src/Explain.h
        ./src/ExplainProvenance.h
        ./src/ExplainProvenanceSLD.h
        ./src/ExplainTree.h
        ./src/Global.cpp
        ./src/Global.h
        ./src/GraphUtils.h
        ./src/gzfstream.h
        ./src/htmx86.h
        ./src/IndexSetAnalysis.cpp
        ./src/IndexSetAnalysis.h
        ./src/InlineRelationsTransformer.cpp
        ./src/InterpreterContext.h
        ./src/Interpreter.cpp
        ./src/Interpreter.h
        ./src/InterpreterIndex.h
        ./src/InterpreterInterface.h
        ./src/InterpreterRecords.cpp
        ./src/InterpreterRecords.h
        ./src/InterpreterRelation.h
        ./src/IODirectives.h
        ./src/IOSystem.h
        ./src/IterUtils.h
        ./src/Logger.h
        ./src/LogStatement.h
        ./src/Macro.h
        ./src/MagicSet.cpp
        ./src/MagicSet.h
        ./src/main.cpp
        ./src/Mpi.h
        ./src/ParallelUtils.h
        ./src/ParserDriver.cpp
        ./src/ParserDriver.h
        ./src/PrecedenceGraph.cpp
        ./src/PrecedenceGraph.h
        ./src/ProfileEvent.h
        ./src/profilerlib/Cell.h
        ./src/profilerlib/CellInterface.h
        ./src/profilerlib/Cli.cpp
        ./src/profilerlib/Cli.h
        ./src/profilerlib/DataComparator.h
        ./src/profilerlib/html_string.h
        ./src/profilerlib/Iteration.cpp
        ./src/profilerlib/Iteration.h
        ./src/profilerlib/OutputProcessor.cpp
        ./src/profilerlib/OutputProcessor.h
        ./src/profilerlib/ProgramRun.cpp
        ./src/profilerlib/ProgramRun.h
        ./src/profilerlib/Reader.cpp
        ./src/profilerlib/Reader.h
        ./src/profilerlib/Relation.cpp
        ./src/profilerlib/Relation.h
        ./src/profilerlib/Row.h
        ./src/profilerlib/Rule.cpp
        ./src/profilerlib/Rule.h
        ./src/profilerlib/StringUtils.cpp
        ./src/profilerlib/StringUtils.h
        ./src/profilerlib/Table.cpp
        ./src/profilerlib/Table.h
        ./src/profilerlib/Tui.cpp
        ./src/profilerlib/Tui.h
        ./src/profilerlib/UserInputReader.cpp
        ./src/profilerlib/UserInputReader.h
        ./src/ProvenanceTransformer.cpp
        ./src/RamAnalysis.h
        ./src/RamCondition.h
        ./src/RamNode.h
        ./src/RamOperation.cpp
        ./src/RamOperation.h
        ./src/RamProgram.h
        ./src/RamRelation.h
        ./src/RamSemanticChecker.h
        ./src/RamStatement.h
        ./src/RamTransformer.cpp
        ./src/RamTransformer.h
        ./src/RamTranslationUnit.h
        ./src/RamTypes.h
        ./src/RamValue.h
        ./src/RamVisitor.h
        ./src/ReadStreamCSV.h
        ./src/ReadStream.h
        ./src/ReadStreamSQLite.h
        ./src/SignalHandler.h
        ./src/souffle2bdd.cpp
        ./src/souffle2lb.cpp
        ./src/SouffleInterface.h
        ./src/souffle_prof.cpp
        ./src/SrcLocation.cpp
        ./src/SrcLocation.h
        ./src/StringPool.h
        ./src/SymbolMask.h
        ./src/SymbolTable.h
        ./src/Synthesiser.cpp
        ./src/Synthesiser.h
        ./src/Table.h
        ./src/TernaryFunctorOps.h
        ./src/test/ast_parser_utils_test.cpp
        ./src/test/ast_program_test.cpp
        ./src/test/ast_utils_test.cpp
        ./src/test/binary_relation_test.cpp
        ./src/test/btree_multiset_test.cpp
        ./src/test/btree_set_test.cpp
        ./src/test/compiled_index_utils_test.cpp
        ./src/test/compiled_relation_test.cpp
        ./src/test/compiled_tuple_test.cpp
        ./src/test/constraints_test.cpp
        ./src/test/graph_utils_test.cpp
        ./src/test/matching_test.cpp
        ./src/test/mpi_test.cpp
        ./src/test/parallel_utils_test.cpp
        ./src/test/ram_executor_test.cpp
        ./src/test/ram_relation_stats_test.cpp
        ./src/test/symbol_table_test.cpp
        ./src/test/table_test.cpp
        ./src/test/test.h
        ./src/test/trie_test.cpp
        ./src/test/type_system_test.cpp
        ./src/test/util_test.cpp
        ./src/Trie.h
        ./src/TypeSystem.cpp
        ./src/TypeSystem.h
        ./src/UnaryFunctorOps.h
        ./src/UnionFind.h
        ./src/Util.h
        ./src/WriteStreamCSV.h
        ./src/WriteStream.h
        ./src/WriteStreamSQLite.h
        ./tests/interface/insert_for/driver.cpp
        ./tests/interface/insert_print/driver.cpp
        ./tests/interface/load_print/driver.cpp
        ./tests/interface/signal_error/driver.cpp
        )
